# local-voice-assistant

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  requirements-cloud-voice.txt  requirements-funasr.txt  vite.config.ts
.github/workflows/: release.yml
deploy/: local-voice-services.service
docs/: 2026-06-15-完整部署与运维指南.md  macos-粘贴与剪贴板踩坑记录.md
docs/plans/: 2026-06-10-cloud-funasr-deepseek.md  2026-06-11-funasr-default-no-bundled-whisper.md
scripts/: build_and_sign_macos.sh  check_funasr_service.sh  check_local_voice_assistant.sh  check_paraformer_service.sh  cloud_voice_service.py  create_macos_internal_signing_secret.sh  download_whisper_tiny_model.mjs  fix_macos_accessibility_permission.sh  funasr_paraformer_server.py  funasr_server.py  start_funasr_service.sh  start_local_voice_assistant.sh  start_paraformer_service.sh
src/: App.tsx  serviceProfiles.ts  styles.css  tauri.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  usage_stats.rs
