[package]
name = "local-voice-assistant"
version = "0.1.23"
description = "A local-first voice assistant built with Tauri"
authors = ["black"]
edition = "2021"

[lib]
name = "local_voice_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cpal = "0.15"
dotenvy = "0.15"
hound = "3"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2.3.0"
tempfile = "3"
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSString"] }
core-graphics = { version = "0.24", features = ["elcapitan"] }
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_UI_Input_KeyboardAndMouse"] }
